# searching

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  main.c  search.c  test.sh
Searching.xcodeproj/DerivedData/project/Index/UnspecifiedConfig/UnspecifiedTarget/project.xcindex/: db.xcindexdb-shm
searching/DerivedData/searching/Index/Debug/macosx10.12-x86_64/searching.xcindex/: db.xcindexdb-shm  db.xcindexdb-wal
searching/DerivedData/searching/Index/Debug/macosx10.12-x86_64h/searching.xcindex/: db.xcindexdb  db.xcindexdb-shm
searching/searching/: main.c
searching/searching.xcodeproj/: project.pbxproj
searching/searching.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
searching/searching.xcodeproj/project.xcworkspace/xcuserdata/mailund.xcuserdatad/: UserInterfaceState.xcuserstate
searching/searching.xcodeproj/xcuserdata/mailund.xcuserdatad/xcschemes/: searching.xcscheme  xcschememanagement.plist
